# neorv32-rs

./: Cargo.toml  README.md
embassy-neorv32/: Cargo.toml  README.md
embassy-neorv32/examples/: Cargo.toml  memory.x  run-fpga  run-sim
embassy-neorv32/examples/.cargo/: config.toml
embassy-neorv32/examples/src/: lib.rs
embassy-neorv32/src/: dma.rs  dual_hart.rs  dualcore.rs  gpio.rs  interrupts.rs  lib.rs  pwm.rs  spi.rs  sysinfo.rs  time_driver.rs  trng.rs  twi.rs  uart.rs  wdt.rs
neorv32-pac/: Cargo.toml  README.md  config.yml  device.x  genpac.sh  neorv32.svd  neorv32.svd-patch.yaml
neorv32-pac/src/: gptmr.rs  interrupt.rs  lib.rs  pwm.rs  tracer.rs  trng.rs
neorv32-pac/src/gptmr/: csr0.rs  csr1.rs  slice.rs
neorv32-pac/src/gptmr/slice/: cnt.rs  thr.rs
neorv32-pac/src/pwm/: channel.rs  clkprsc.rs  enable.rs  mode.rs  polarity.rs
neorv32-pac/src/pwm/channel/: topcmp.rs
neorv32-pac/src/sysinfo/: mem.rs  soc.rs
neorv32-pac/src/tracer/: delta_dst.rs  delta_src.rs
neorv32-pac/src/trng/: data.rs
