[package]
name = "embassy-neorv32"
version = "0.1.0"
edition = "2024"
authors = ["Kurtis Dinelle <kurtis.dinelle@gmail.com>"]
license = "MIT"
repository = "https://github.com/kurtjd/embassy-neorv32"

[features]
default = ["time-driver", "rt"]
defmt = ["dep:defmt"]
rt = ["dep:riscv-rt", "neorv32-pac/rt"]
v-trap = ["rt", "neorv32-pac/v-trap"]
time-driver = ["dep:embassy-time-driver", "dep:embassy-time-queue-utils"]
single-core = ["riscv/critical-section-single-hart"]
dual-core = ["critical-section/restore-state-u8"]

[dependencies]
neorv32-pac = { path = "../neorv32-pac", features = ["critical-section"] }
riscv = { version = "0.16.0" }
riscv-rt = { version = "0.17.0", optional = true }
critical-section = { version = "1.2.0" }
defmt = { version = "1.0.1", optional = true }

# Note: CLINT MTIMER always runs at CPU freq, thus this needs to match CPU FREQ
# But CPU freq is configurable, so defer tick rate choice to binary
embassy-time-driver = { version = "0.2.1", optional = true }
embassy-time-queue-utils = { version = "0.3.0", optional = true }
embassy-sync = "0.7.2"
embassy-futures = "0.1.2"
embassy-hal-internal = "0.3.0"
embassy-executor = "0.9.1"

embedded-hal-02 = { package = "embedded-hal", version = "0.2.7", features = [
    "unproven",
] }
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
