[package]
name = "embassy-neorv32"
version = "0.1.0"
edition = "2024"
description = "Embassy Hardware Abstraction Layer (HAL) for the open-source NEORV32 RISC-V microcontroller"
authors = ["Kurtis Dinelle <kurtis.dinelle@gmail.com>"]
license = "MIT"
keywords = ["embedded", "hal", "risc-v", "neorv32", "embassy"]
repository = "https://github.com/kurtjd/neorv32-rs"

[features]
default = ["time-driver", "rt"]
defmt = ["dep:defmt"]
rt = ["dep:riscv-rt", "neorv32-pac/rt"]
v-trap = ["rt", "neorv32-pac/v-trap"]
single-hart = ["riscv/critical-section-single-hart"]
dual-hart = ["critical-section/restore-state-u8"]

# Note: CLINT MTIMER always runs at CPU freq, thus this needs to match CPU FREQ
# But CPU freq is configurable, so defer tick rate choice to binary
time-driver = ["dep:embassy-time-driver", "dep:embassy-time-queue-utils", "rt"]

[dependencies]
neorv32-pac = { version = "0.1.0", path = "../neorv32-pac", features = [
    "critical-section",
] }
riscv = { version = "0.16.0" }
riscv-rt = { version = "0.17.0", optional = true }
critical-section = { version = "1.2.0" }
defmt = { version = "1.0.1", optional = true }

embassy-time-driver = { version = "0.2.1", optional = true }
embassy-time-queue-utils = { version = "0.3.0", optional = true }
embassy-sync = "0.7.2"
embassy-futures = "0.1.2"
embassy-hal-internal = "0.3.0"
embassy-executor = "0.9.1"

embedded-hal-02 = { package = "embedded-hal", version = "0.2.7", features = [
    "unproven",
] }
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
