[package]
name = "neorv32-pac"
version = "0.1.0"
edition = "2024"
authors = ["Kurtis Dinelle <kurtis.dinelle@gmail.com>"]
license = "MIT"
repository = "https://github.com/kurtjd/embassy-neorv32"

[dependencies]
critical-section = { version = "1.2.0", optional = true }
riscv = "0.16.0"
riscv-peripheral = "0.5.0"
riscv-rt = { version = "0.17.0", features = [
    "no-interrupts",
    "no-exceptions",
    "device",
    "memory",
], optional = true }
vcell = "0.1.3"

[features]
rt = ["riscv-rt"]
v-trap = ["rt", "riscv-rt/v-trap"]
