[package]
name = "neorv32-pac"
version = "0.1.0"
edition = "2024"
description = "Peripheral Access Crate (PAC) for the open-source NEORV32 RISC-V microcontroller"
authors = ["Kurtis Dinelle <kurtis.dinelle@gmail.com>"]
license = "MIT"
keywords = ["embedded", "risc-v", "neorv32", "pac", "no-std"]
repository = "https://github.com/kurtjd/neorv32-rs"

[dependencies]
critical-section = { version = "1.2.0", optional = true }
riscv = "0.16.0"
riscv-peripheral = "0.5.0"
riscv-rt = { version = "0.17.0", features = [
    "no-interrupts",
    "no-exceptions",
    "device",
    "memory",
], optional = true }
vcell = "0.1.3"

[features]
rt = ["riscv-rt"]
v-trap = ["rt", "riscv-rt/v-trap"]
