[workspace]

[package]
name = "neorv32-embassy-examples"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
debug = true
opt-level = "z"
panic = "abort"
incremental = false

[features]
default = ["single-core"]
single-core = ["embassy-executor/arch-riscv32", "embassy-neorv32/single-core"]
dual-core = ["embassy-neorv32/dual-core"]

[dependencies]
embassy-executor = { version = "0.9.1", features = ["executor-thread"] }
embassy-neorv32 = { path = "../" }
# Note: CLINT MTIMER always runs at CPU freq, thus this needs to match CPU FREQ
# But CPU freq is configurable, so defer tick rate choice to binary
embassy-time = { version = "0.5.0", features = ["tick-hz-50_000_000"] }
embassy-sync = "0.7.2"
riscv = "0.15.0"
riscv-rt = "0.16.0"
panic-halt = "1.0.0"

embedded-hal-02 = { package = "embedded-hal", version = "0.2.7", features = [
    "unproven",
] }
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-bus = { version = "0.3.0", features = ["async"] }

is31fl3743b-driver = { version = "0.1.1" }
lm75 = "1.0.0"
